--- a/PathCraft/index.html
+++ b/PathCraft/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" class="dark">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -15,7 +15,18 @@
             <a href="index.html" class="hover:text-blue-600">Accueil</a>
             <a href="about.html" class="hover:text-blue-600">À propos</a>
             <a href="portfolio.html" class="hover:text-blue-600">Portfolio</a>
+            <button id="themeToggle" class="bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-200 px-4 py-2 rounded">
+                🌞 / 🌙
+            </button>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+            <h1 class="text-4xl font-bold animate__animated animate__fadeInDown">Bienvenue sur mon portfolio</h1>
+            <section class="animate__animated animate__zoomIn animate__delay-1s">
+            </section>
+            <button class="transition duration-300 ease-in-out transform hover:scale-105 hover:bg-blue-500">
+                En savoir plus
+            </button>
         </nav>
+
     </div>
 </header>
 
@@ -49,6 +60,18 @@
 <footer class="text-center text-sm text-gray-500 py-6">
     © 2025 Milad Alizadeh - Portfolio personnel
 </footer>
+<script>
+    
+    if (localStorage.getItem('theme') === 'dark') {
+    document.documentElement.classList.add('dark');
+    }
+
+    document.getElementById('themeToggle')?.addEventListener('click', () => {
+      const html = document.documentElement;
+      html.classList.toggle('dark');
+      localStorage.setItem('theme', html.classList.contains('dark') ? 'dark' : 'light');
+    });
+</script>
 
 </body>
 </html>
