--- a/PathCraft/Portfolio.html
+++ b/PathCraft/Portfolio.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" class="dark">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Portfolio - Milad Alizadeh</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <h1 class="text-4xl font-bold animate__animated animate__fadeInDown">Bienvenue sur mon portfolio</h1>
+  <section class="animate__animated animate__zoomIn animate__delay-1s">
+    <button class="transition duration-300 ease-in-out transform hover:scale-105 hover:bg-blue-500">
+      En savoir plus
+    </button>    
+    </section>
+  
 </head>
 <body class="bg-white text-gray-800">
 
-  <!-- Header -->
   <header class="bg-white shadow-md fixed top-0 w-full z-10">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-xl font-bold">Mon Portfolio</h1>
@@ -16,6 +23,9 @@
         <a href="index.html" class="hover:text-blue-600">Accueil</a>
         <a href="about.html" class="hover:text-blue-600">À propos</a>
         <a href="portfolio.html" class="text-blue-600 font-semibold">Portfolio</a>
+        <button id="themeToggle" class="bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-200 px-4 py-2 rounded">
+          🌞 / 🌙
+        </button>        
       </nav>
     </div>
   </header>
@@ -129,6 +139,16 @@
     function closeModal(id) {
     document.getElementById(id).classList.add("hidden");
     }
+</script>
+<script>
+  if (localStorage.getItem('theme') === 'dark') {
+    document.documentElement.classList.add('dark');
+  }
+  document.getElementById('themeToggle')?.addEventListener('click', () => {
+    const html = document.documentElement;
+    html.classList.toggle('dark');
+    localStorage.setItem('theme', html.classList.contains('dark') ? 'dark' : 'light');
+  });
 </script>
 </body>
 </html>
