--- a/PathCraft/index.html
+++ b/PathCraft/index.html
@@ -63,7 +63,7 @@
       </div>
       <div class="card p-6 rounded shadow-md">
         <h3 class="text-2xl font-semibold mb-2">Mes projets</h3>
-        <p>Python -> Quizify<br>TypeScript -> Juste Prix<br>Docker -> Compose ton vote</p>
+        <p>Python -> Quizify<br>TypeScript -> Juste Prix et le Compte est Bon<br>Docker -> Compose ton vote</p>
       </div>
     </section>
   </main>
