--- a/PathCraft/index.html
+++ b/PathCraft/index.html
@@ -45,6 +45,7 @@
         <a href="index.html">Accueil</a>
         <a href="about.html">À propos</a>
         <a href="projet.html">Portfolio</a>
+        <a href="interactivite.html">Contact</a>
         <button id="themeToggle" class="px-4 py-2 rounded">🌞 / 🌙</button>
       </nav>
     </div>
