--- a/PathCraft/about.html
+++ b/PathCraft/about.html
@@ -40,6 +40,7 @@
         <a href="index.html">Accueil</a>
         <a href="about.html">À propos</a>
         <a href="projet.html">Portfolio</a>
+        <a href="interactivite.html">Contact</a>
         <button id="themeToggle" class="px-4 py-2 rounded">🌞 / 🌙</button>
       </nav>
     </div>
@@ -49,8 +50,7 @@
     <section class="text-center">
       <h2 class="text-3xl font-bold mb-4">Qui suis-je ?</h2>
       <div class="flex justify-center mb-6">
-        <img src="votre-photo.jpg" alt="Votre photo" class="rounded-full w-32 h-32 object-cover shadow-lg">
-      </div>
+        </div>
       <p class="text-lg mb-6">
         Dynamique et déterminé, je suis motivé à rejoindre une entreprise innovante où je pourrai développer mes compétences techniques, tout en apportant ma contribution à des projets concrets, de la conception à l'exécution.
       </p>
@@ -58,31 +58,24 @@
       <h3 class="text-2xl font-semibold mb-4">Compétences clés</h3>
       <div class="space-y-4 mb-6">
         <div class="flex items-center justify-center p-4 bg-orange-100 rounded-lg shadow-lg">
-          <img src="html5-badge.png" alt="HTML5" class="w-12 h-12 mr-2">
           <span class="text-lg text-orange-700">HTML5</span>    
         </div>
         <div class="flex items-center justify-center p-4 bg-blue-100 rounded-lg shadow-lg">
-          <img src="css-badge.png" alt="CSS" class="w-12 h-12 mr-2">
           <span class="text-lg text-blue-800">CSS</span>      
         </div>
         <div class="flex items-center justify-center p-4 bg-yellow-200 rounded-lg shadow-lg">
-          <img src="js-badge.png" alt="JavaScript" class="w-12 h-12 mr-2">
           <span class="text-lg text-yellow-900">JavaScript</span>
         </div>
         <div class="flex items-center justify-center p-4 bg-yellow-200 rounded-lg shadow-lg">
-          <img src="python-badge.png" alt="Python" class="w-12 h-12 mr-2">
           <span class="text-lg text-blue-600">Python</span>
         </div>
         <div class="flex items-center justify-center p-4 bg-blue-100 rounded-lg shadow-lg">
-          <img src="typescript-badge.png" alt="TypeScript" class="w-12 h-12 mr-2">
           <span class="text-lg text-blue-700">TypeScript</span>
         </div>
         <div class="flex items-center justify-center p-4 bg-blue-200 rounded-lg shadow-lg">
-          <img src="sql-badge.png" alt="SQL" class="w-12 h-12 mr-2">
           <span class="text-lg text-blue-800">SQL</span>
         </div>
         <div class="flex items-center justify-center p-4 bg-blue-50 rounded-lg shadow-lg">
-          <img src="docker-badge.png" alt="Docker" class="w-12 h-12 mr-2">
           <span class="text-lg text-cyan-800">Docker</span>
         </div>  
       </div>
@@ -90,15 +83,14 @@
       <h3 class="text-2xl font-semibold mb-4">Niveau de compétences</h3>
       <div class="space-y-4 mb-6">
         <div class="flex items-center justify-center p-4 bg-orange-100 rounded-lg shadow-lg">
-          <img src="html5-badge.png" alt="HTML5" class="w-12 h-12 mr-2">
           <span class="text-lg text-orange-700 mr-4">HTML5</span>
-          <div class="w-full bg-orange-200 rounded-full h-2.5">
-            <div class="bg-orange-600 h-2.5 rounded-full" style="width: 60%"></div>
+          <div class="w-full bg-gray-300 rounded-full h-2.5">
+            <div class="bg-black h-2.5 rounded-full" style="width: 60%"></div>
+          </div>
           </div>
         </div>
 
         <div class="flex items-center justify-center p-4 bg-blue-100 rounded-lg shadow-lg">
-          <img src="css-badge.png" alt="CSS" class="w-12 h-12 mr-2">
           <span class="text-lg text-blue-800 mr-4">CSS</span>
           <div class="w-full bg-blue-200 rounded-full h-2.5">
             <div class="bg-blue-600 h-2.5 rounded-full" style="width: 85%"></div>
@@ -106,7 +98,6 @@
         </div>
 
         <div class="flex items-center justify-center p-4 bg-yellow-100 rounded-lg shadow-lg">
-          <img src="js-badge.png" alt="JavaScript" class="w-12 h-12 mr-2">
           <span class="text-lg text-yellow-900 mr-4">JavaScript</span>
           <div class="w-full bg-yellow-200 rounded-full h-2.5">
             <div class="bg-yellow-500 h-2.5 rounded-full" style="width: 75%"></div>
@@ -114,7 +105,6 @@
         </div>
 
         <div class="flex items-center justify-center p-4 bg-yellow-200 rounded-lg shadow-lg">
-          <img src="python-badge.png" alt="Python" class="w-12 h-12 mr-2">
           <span class="text-lg text-blue-600 mr-4">Python</span>
           <div class="w-full bg-yellow-300 rounded-full h-2.5">
             <div class="bg-yellow-600 h-2.5 rounded-full" style="width: 80%"></div>
@@ -122,7 +112,6 @@
         </div>
 
         <div class="flex items-center justify-center p-4 bg-blue-100 rounded-lg shadow-lg">
-          <img src="typescript-badge.png" alt="TypeScript" class="w-12 h-12 mr-2">
           <span class="text-lg text-blue-700 mr-4">TypeScript</span>
           <div class="w-full bg-blue-200 rounded-full h-2.5">
             <div class="bg-blue-600 h-2.5 rounded-full" style="width: 70%"></div>
@@ -130,7 +119,6 @@
         </div>
 
         <div class="flex items-center justify-center p-4 bg-blue-200 rounded-lg shadow-lg">
-          <img src="sql-badge.png" alt="SQL" class="w-12 h-12 mr-2">
           <span class="text-lg text-blue-800 mr-4">SQL</span>
           <div class="w-full bg-blue-300 rounded-full h-2.5">
             <div class="bg-blue-800 h-2.5 rounded-full" style="width: 90%"></div>
@@ -138,10 +126,12 @@
         </div>
 
         <div class="flex items-center justify-center p-4 bg-blue-50 rounded-lg shadow-lg">
-          <img src="docker-badge.png" alt="Docker" class="w-12 h-12 mr-2">
-          <span class="text-lg text-cyan-800 mr-4">Docker</span>
-          <div class="w-full bg-blue-100 rounded-full h-2.5">
-            <div class="bg-cyan-600 h-2.5 rounded-full" style="width: 80%"></div>
+          <span class="text-lg text-blue-900 mr-4">Docker</span>
+          <div class="w-full bg-blue-200 rounded-full h-2.5">
+            <div class="bg-blue-900 h-2.5 rounded-full" style="width: 80%"></div>
+          </div>
+        </div>
+        
           </div>
         </div>
       </div>
